syntax = "proto3";

package order_service;

option go_package = "./order";

message Product {
  int64 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 quantity = 5;
}

message Cart {
  repeated Product products = 1;
}

message CreateOrderRequest {
  int64 userId = 1;
  Cart cart = 2;
}

message CreateOrderResponse {
  int64 id = 1;
  int64 userId = 2;
  Cart cart = 3;
}

message GetAllOrdersByUserIdRequest {
  int64 userId = 1;
}

message GetAllOrdersByUserIdResponse {
  repeated CreateOrderResponse orders = 1;
}

service OrderService {
  rpc createOrder(CreateOrderRequest) returns (CreateOrderResponse) {}
  rpc getAllOrdersByUserId(GetAllOrdersByUserIdRequest) returns (GetAllOrdersByUserIdResponse) {}
}